feat: update class diagram and database seeding logic to use LocalDate for date fields